Bug 84256 - Other: Find toolbar doesn't show previous search
Summary: Other: Find toolbar doesn't show previous search
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.3.2.2 release
Hardware: Other Linux (All)
: medium normal
Assignee: Samuel Mehrbrodt
URL:
Whiteboard: BSA target:4.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-09-23 18:01 UTC by krajcsi
Modified: 2014-09-23 19:11 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description krajcsi 2014-09-23 18:01:51 UTC
Problem description: 
After pressing ctrl+F find toolbar does not include the previous search term

Steps to reproduce:
1. Ctrl+F
2. type 'one'
3. press Enter
4. Ctrl+F

Current behavior:
Find text is empty.

Expected behavior:
Find text could include previous search term selected. E.g., Chrome search field does this.
Operating System: Linux (Other)
Version: 4.3.2.2 rc
Comment 1 Samuel Mehrbrodt 2014-09-23 18:55:52 UTC
Thanks for the report!
Comment 2 Commit Notification 2014-09-23 19:10:37 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ed01da53ff04b1cfd6708e12f26d06cb9288a61f

fdo#84256 Prepopulate findbar with last search term



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.