fdo#84256 Prepopulate findbar with last search term

Change-Id: I6a6fa994e3e90ade206ffea73b8047ac8b2af90e